[gd_scene load_steps=5 format=3 uid="uid://8e3qtmpquhlq"]

[ext_resource type="Script" uid="uid://dl00y2iuvm4lg" path="res://todo_page/todo_item/todo_item.gd" id="1_rbdnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kf1d7"]
bg_color = Color(0.7162604, 0.55567855, 0.44206974, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbdnh"]
bg_color = Color(0.22245592, 0.7176193, 7.70092e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52rrg"]
bg_color = Color(0.7607843, 0.25882354, 0.24705882, 1)

[node name="TodoItem" type="Panel"]
custom_minimum_size = Vector2(300, 50)
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kf1d7")
script = ExtResource("1_rbdnh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="Panel" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Panel"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Item"

[node name="Control" type="Control" parent="MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Coins" type="Label" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Coins: "

[node name="Edit" type="Button" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_rbdnh")
text = "Edit"

[node name="Delete" type="Button" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_52rrg")
text = "Del"

[connection signal="toggled" from="MarginContainer/Panel/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/Panel/Delete" to="." method="_on_delete_pressed"]
